--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "next": "14.2.4",
@@ -14,14 +15,32 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "29",
     "@types/node": "20.14.8",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/testing-library__react": "^10.2.0",
     "autoprefixer": "^10.0.1",
+    "babel-jest": "^30.0.4",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "jest": "29",
+    "jest-environment-jsdom": "^30.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.4",
+    "ts-jest": "29",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "string-width": "^4.0.0",
+    "wrap-ansi": "^7.0.0"
   }
 }
